objects/EUR_CRM_Fair_Share_Comparison__c.object
<CustomObject>
    <description>Reference Tables for Fair Share comparison between PR and Competitor Products</description>
    <fields>
        <fullName>EUR_CRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>EUR_CRM_Category__c</referenceTo>
        <relationshipName>Fair_Shares_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_PR_Target__c</fullName>
        <label>PR Target %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Fair Share Comparison (EU)</label>
    <listViews>
        <fullName>EUR_BE_Fair_Share_Comperisons</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_CRM_PR_Target__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Fair_Share_Comparison__c.EUR_BE_Fair_Share_Comparison</value>
        </filters>
        <label>All BE Fair Share Comperisons</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Fair_Share_Comparison</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_CRM_PR_Target__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Fair_Share_Comparison__c.EUR_RU_Fair_Share_Comparison_BQ</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Fair_Share_Comparison__c.EUR_RU_Fair_Share_Comparison_BQS</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Fair_Share_Comparison__c.EUR_RU_Fair_Share_Comparison_Brand</value>
        </filters>
        <label>EUR RU Fair Share Comparison</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FSC-{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fair Share Comparison (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Fair_Share_Comparison</fullName>
        <active>true</active>
        <label>EUR BE Fair Share Comparison</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Fair_Share_Comparison_BQ</fullName>
        <active>true</active>
        <label>EUR RU Fair Share Comparison (BQ)</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Fair_Share_Comparison_BQS</fullName>
        <active>true</active>
        <label>EUR RU Fair Share Comparison (BQS)</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Fair_Share_Comparison_Brand</fullName>
        <active>true</active>
        <label>EUR RU Fair Share Comparison (Brand)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>